--- a/DAT200/laboppgaven 5/canvas.html
+++ b/DAT200/laboppgaven 5/canvas.html
@@ -8,14 +8,12 @@
 </head>
 <body>
 <div>
-    <!--
-    <label for="resolution"></label><input type="number" min="1" id="resolution" value="1" onchange="draw()">
-    <label for="kx"></label><input type="number" min="1" id="kx" value="1" onchange="draw()">
+    <button id="drawnew" onclick="curr_option=0">Draw New</button>
+    <button id="transform point" onclick="curr_option=1">transform point</button>
+    <button id="scale polygon" onclick="curr_option=2">scale polygon</button>
+    <button id="rotate polygon" onclick="curr_option=3">rotate polygon</button>
 
-    <label for="resolution"></label><input type="number" min="1" id="resolution" value="1" onchange="draw_Squares()">
-    <label for="kx"></label><input type="number" min="1" id="kx" value="1" onchange="draw_Squares()">
-    <label for="p_value">P Value: </label><input type="range" min="0" max="1" value="0.1" step="0.1" id="p_value" onchange="draw_Squares()">
-    --->
+
 </div>
 <div>
     <canvas id="myCanvas" width="800" height="800" style="border:1px solid #d3d3d3;"></canvas>
